# PYRAI

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: auto-release.yml  benchmark.yml  ci.yml  codeql.yml  dependencies.yml  docker.yml  docs.yml  release.yml
engine/backends/: pytorch.py  tensorflow.py
engine/core/: base.py  metrics.py  optimizer.py  preprocessing.py  versioning.py
engine/deployment/: ab_testing.py  config.py  manager.py  server.py
engine/distributed/: coordinator.py  worker.py
engine/monitoring/: logger.py  profiler.py
src/api/: app.py  models.py  routes.py
src/core/: __init__.py  config.py  exceptions.py  interfaces.py  metrics_collector.py  model_manager.py  resource_scheduler.py  storage_manager.py  training_coordinator.py
tests/: __init__.py  conftest.py
tests/api/: test_routes.py
tests/core/: __init__.py  test_metrics_collector.py  test_model_manager.py  test_resource_scheduler.py  test_storage_manager.py  test_training_coordinator.py
tests/integration/: test_deployment.py  test_distributed.py  test_training.py
tests/performance/: test_concurrency.py  test_inference.py  test_load.py
tests/unit/: test_edge_cases.py
tests/unit/backends/: test_pytorch.py  test_tensorflow.py
tests/unit/core/: test_base.py  test_metrics.py  test_optimizer.py  test_preprocessing.py  test_versioning.py
tests/unit/deployment/: test_server.py
tests/unit/distributed/: test_coordinator.py
web/: package.json  vite.config.ts
web/src/: App.tsx  router.tsx
(+35 files in other folders)
