[tool.poetry]
name = "pyrai"
version = "0.1.0"
description = "Python Reinforced AI Infrastructure"
authors = ["PYRAI Team <pyr_ai@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pyrai.vercel.app"
repository = "https://github.com/pyraixyz/PYRAI"
documentation = "https://pyrai.vercel.app/docs"
keywords = ["ai", "blockchain", "infrastructure", "distributed-computing"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pytorch = "^2.1.0"
tensorflow = "^2.14.0"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
asyncio = "^3.4.3"
aiohttp = "^3.9.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyrai = "pyrai.cli:main" 